# SaferGap

./: CMakeLists.txt  README.md  installation_guide.md  package.xml  pg_mpc_local_planner_plugin.xml  safer_gap_install.rosinstall  sg_mpc_local_planner_plugin.xml
SuppMat/: ZBF_3D_visual.md  parameters.md
SuppMat/assets/: ablation_study_results.tex
cfg/diff_drive/: costmap_common_params.yaml  pg_mpc_local_planner_params_minimum_time.yaml  pg_mpc_local_planner_params_potential_gap.yaml  pg_mpc_local_planner_params_quadratic_form.yaml  potentialgap_local_planner_params.yaml
include/potential_gap_mpc/: controller_hc.h  keyhole.hpp  pg_mpc_hc_local_planner_ros.h  print_utils.h
include/safer_gap/: controller_hc.h  keyhole.hpp  print_utils.h  sg_mpc_hc_local_planner_ros.h
launch/: diff_drive_casadi.launch  diff_drive_minimum_time.launch  diff_drive_potential_gap.launch  diff_drive_quadratic_form.launch
msg/: OptimalStats.msg
rviz/: rviz_navigation.rviz
src/: controller_hc.cpp  keyhole.cpp  pg_mpc_hc_local_planner_ros.cpp  sg_mpc_hc_local_planner_ros.cpp
stage/: maze_diff_drive.world
stage/robots/: diff_drive_robot.inc
