<?xml version="1.0"?>
<package format="2">
  <name>potential_gap_mpc</name>
  <version>0.0.0</version>
  <description>The potential_gap_mpc package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shiyufeng@gatech.edu">Shiyu Feng</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/turtlebot_path_following</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>

  <depend>control_box_rst</depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>costmap_converter</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>mbf_costmap_core</depend>
  <depend>mbf_msgs</depend>
  <depend>mpc_local_planner_msgs</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>teb_local_planner</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>potential_gap</depend>
  <depend>pips_egocylindrical</depend>
  <depend>mpc_local_planner</depend>

  <depend>pcl_ros</depend>
  <depend>trajectory_generator</depend>
  <depend>turtlebot_trajectory_testing</depend>
  <depend>turtlebot_trajectory_functions</depend>
  <depend>tf2_pips</depend>
  <depend>cubic_spline_smoother</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <nav_core plugin="${prefix}/pg_mpc_local_planner_plugin.xml"/>
    <mbf_costmap_core plugin="${prefix}/pg_mpc_local_planner_plugin.xml"/>
  </export>

</package>
